# NeteaseCloudMusicTools

./: .gitignore  .gitmodules  README.md  pyproject.toml
ncm_crack/: __main__.py
ncm_crack/core/: crypto.py  decryptor.py  models.py  parser.py
ncm_crack/metadata/: fixer.py  writer.py
ncm_crack/utils/: fs.py  image.py
