[project]
    name = "ncm-crack"
    version = "0.2.0"
    description = "NCM file decryptor with full metadata and cover art support"
    requires-python = ">=3.12"
    dependencies = [
        "eyed3>=0.9.9",
        "music-tag>=0.4.3",
        "mutagen>=1.47.0",
        "psutil>=7.2.1",
        "pycryptodome>=3.23.0",
        "requests>=2.34.2",
        "setuptools>=82.0.1",
        "tqdm>=4.67.1",
]

[project.scripts]
ncm-crack = "ncm_crack.__main__:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["ncm_crack"]
